--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         </div>
       </nav>
       <div class="container">
-          <h1>Test</h1>
+          <h1>Current Cases</h1>
           <div class="row">
             <div class="col-sm-6">
               <div id="map"></div>
