--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -62,6 +62,9 @@
             <div class="col-sm-6">
               <div id="map"></div>
             </div>
+              <div class="col-sm-6">
+                  <div id="line-graph"></div>
+              </div>
           </div>
       </div>
     <script
