--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -59,9 +59,14 @@
       <div class="container">
           <h1>Current Cases</h1>
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-8">
               <div id="map"></div>
             </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-4">
+                  <div id="case-breakdown"></div>
+              </div>
           </div>
       </div>
     <script
