--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>COVID 19</title>
+
+    <!-- Metadata -->
+    <title>Coronavirus Insights</title>
     <meta name="description" content="The HTML5 Herald">
+    <meta name="author" content="Copyright Adam Jaamour & Matthew Drago © 2020">
+    <meta name="keywords" content="coronavirus, virus, covid-19, covid, wuhan, cases, john hopkins">
+    <meta name="description"
+          content="This website aims to provide insights in the 2019 Novel Coronavirus COVID-19 by visualising the Johns
+          Hopkins University Centre for Systems Science and Engineering through the d3.js library.">
+
+    <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Custom CSS stylesheets -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+
+    <!-- Third-party CSS stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
           integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
           crossorigin=""/>
@@ -46,7 +59,8 @@
 <!--        </ul>-->
 <!--    </div>-->
 <!--</nav>-->
-<h1>Current Cases</h1>
+<h1>Coronavirus Insights</h1>
+<h2>Current Cases</h2>
 <div class="row">
     <div class="col-sm-8">
         <div id="map"></div>
@@ -60,6 +74,11 @@
         <div id="case-breakdown"></div>
     </div>
 </div>
+
+<!-- Custom JS module import -->
+<script type="module" src="index.js"></script>
+
+<!-- Third-party JS libraries import -->
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -70,7 +89,6 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://unpkg.com/topojson@3"></script>
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-<script type="module" src="index.js"></script>
 </body>
 
 </html>
