Rename inner index.js to main.js to avoid confusion

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 </div>
 
 <!-- Custom JS module import -->
-<script type="module" src="index.js"></script>
+<script type="module" src="main.js"></script>
 
 <!-- Third-party JS libraries import -->
 <script
