--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
           Hopkins University Centre for Systems Science and Engineering through the d3.js library.">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Custom CSS stylesheets -->
     <link rel="stylesheet" type="text/css" href="styles/style.css">
