Move all JS files to own directory

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Custom CSS stylesheets -->
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Third-party CSS stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -76,7 +76,7 @@
 </div>
 
 <!-- Custom JS module import -->
-<script type="module" src="main.js"></script>
+<script type="module" src="js/main.js"></script>
 
 <!-- Third-party JS libraries import -->
 <script
