--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,6 @@
     </div>
 </div>
 
-<!-- Custom JS module import -->
-<script type="module" src="js/main.js"></script>
-
 <!-- Third-party JS libraries import -->
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -89,6 +86,10 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://unpkg.com/topojson@3"></script>
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js" integrity="sha256-gX8uuyxN8stSMHWO9arnnKyenTOALaVAcVB3b6P87e4=" crossorigin="anonymous"></script>
+
+<!-- Custom JS module import -->
+<script type="module" src="js/main.js"></script>
 </body>
 
 </html>
