--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         <div id="map"></div>
     </div>
     <div class="col-sm-4">
-        <div id="line-graph"></div>
+        <div id="line-graph-daily-evolution"></div>
     </div>
 </div>
 <div class="row">
