--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,9 @@
     <div class="col-sm-6">
         <div id="case-breakdown"></div>
     </div>
+    <div class="col-sm-6">
+        <div id="line-graph-total"></div>
+    </div>
 </div>
 
 <!-- Third-party JS libraries import -->
