--- a/src/index.html
+++ b/src/index.html
@@ -90,13 +90,13 @@
                         </div>
                     </div>
 
-                    <!-- Earnings (Monthly) Card Example -->
+                    <!-- Total confirmed cases -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-success shadow h-100 py-2">
+                        <div class="card border-left-danger shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                        <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
                                             Total confirmed cases
                                         </div>
                                         <div class="h5 mb-0 font-weight-bold text-gray-800">3,000,000</div>
@@ -109,14 +109,33 @@
                         </div>
                     </div>
 
-                    <!-- Earnings (Monthly) Card Example -->
+                    <!-- Confirmed cases today -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-info shadow h-100 py-2">
+                        <div class="card border-left-warning shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Infected
-                                            Countries
+                                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                            Confirmed cases today
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">60,000</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fas fa-hospital fa-2x text-gray-300"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Infected countries -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-success shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                            Infected Countries
                                         </div>
                                         <div class="row no-gutters align-items-center">
                                             <div class="col-auto">
@@ -124,7 +143,7 @@
                                             </div>
                                             <div class="col">
                                                 <div class="progress progress-sm mr-2">
-                                                    <div class="progress-bar bg-info" role="progressbar"
+                                                    <div class="progress-bar bg-success" role="progressbar"
                                                          style="width: 94.9%" aria-valuenow="185" aria-valuemin="0"
                                                          aria-valuemax="195"></div>
                                                 </div>
@@ -139,24 +158,6 @@
                         </div>
                     </div>
 
-                    <!-- Pending Requests Card Example -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-warning shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                            Confirmed cases  today
-                                        </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">60,000</div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <i class="fas fa-hospital fa-2x text-gray-300"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 <!-- Content Row -->
