Correct layout on Bootstrap grid

--- a/src/index.html
+++ b/src/index.html
@@ -159,15 +159,15 @@
                     </div>
 
                 </div>
+                <!-- End of Row -->
 
                 <!-- Content Row -->
-
                 <div class="row">
 
-                    <!-- Area Chart -->
-                    <div class="col-xl-8 col-lg-7">
+                    <!-- Map -->
+                    <div class="col-xl-7 col-lg-7">
                         <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
+                            <!-- Card Header -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h6 class="m-0 font-weight-bold text-primary">Worldwide Confirmed Cases</h6>
                             </div>
@@ -177,11 +177,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End of Map -->
 
-                    <!-- Pie Chart -->
-                    <div class="col-xl-4 col-lg-5">
+                    <!-- Charts controlled by map -->
+                    <div class="col-xl-5 col-lg-5">
+
+                        <!-- Daily evolution line graph -->
                         <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
+                            <!-- Card Header -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h6 class="m-0 font-weight-bold text-primary">Daily Evolution</h6>
                             </div>
@@ -202,16 +205,8 @@
                                 <!--                                </div>-->
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <!-- Content Row -->
-                <div class="row">
-
-                    <!-- Content Column -->
-                    <div class="col-lg-6 mb-4">
-
-                        <!-- Project Card Example -->
+                        <!-- Lollipop Chart -->
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
                                 <h6 class="m-0 font-weight-bold text-primary">Lollipop Chart</h6>
@@ -220,23 +215,28 @@
                                 <div id="case-breakdown"></div>
                             </div>
                         </div>
-
                     </div>
 
-                    <div class="col-lg-6 mb-4">
+                </div>
+                <!-- End of Row -->
 
-                        <!-- Approach -->
+                <!-- Content Row -->
+                <div class="row">
+
+                    <div class="col-lg-12 mb-12">
+                        <!-- Line chart showing all cases -->
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Total Occurences</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Total Occurrences</h6>
                             </div>
                             <div class="card-body">
                                 <div id="line-graph-total"></div>
                             </div>
                         </div>
-
                     </div>
+
                 </div>
+                <!-- End of Row -->
 
             </div>
             <!-- /.container-fluid -->
