Correct line chart sizes

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
                     <!-- End of Map -->
 
                     <!-- Charts controlled by map -->
-                    <div class="col-xl-5 col-lg-5">
+                    <div id="line-graph-daily-evolution-container" class="col-xl-5 col-lg-5">
 
                         <!-- Daily evolution line graph -->
                         <div class="card shadow mb-4">
