--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,9 @@
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Adam Jaamour & Matthew Drago · 2020</span>
+                    <span>Built with D3.js, Node.js & <i class="fa fa-fw fa-heart" style="color: red"></i> by Adam Jaamour & Matthew Drago · &copy; 2020</span>
+                    <br>
+                    <span><i>Data source: JHU CSSE (Johns Hopkins University Center for Systems Science and Engineering).</i></span>
                 </div>
             </div>
         </footer>
