--- a/src/index.html
+++ b/src/index.html
@@ -83,9 +83,9 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                            Date
+                                            Last update
                                         </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">27/04/2020</div>
+                                        <div id="card-date" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                     </div>
                                     <div class="col-auto">
                                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
