Populate total number of cases confirmed card

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                                         <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
                                             Total confirmed cases
                                         </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">3,000,000</div>
+                                        <div id="card-total-confirmed-cases" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                     </div>
                                     <div class="col-auto">
                                         <i class="fas fa-check-square fa-2x text-gray-300"></i>
