--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
                                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                             Confirmed cases today
                                         </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">60,000</div>
+                                        <div id="card-confirmed-cases-today" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                     </div>
                                     <div class="col-auto">
                                         <i class="fas fa-hospital fa-2x text-gray-300"></i>
@@ -144,12 +144,12 @@
                                         </div>
                                         <div class="row no-gutters align-items-center">
                                             <div class="col-auto">
-                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">185</div>
+                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">187</div>
                                             </div>
                                             <div class="col">
                                                 <div class="progress progress-sm mr-2">
                                                     <div class="progress-bar bg-success" role="progressbar"
-                                                         style="width: 94.9%" aria-valuenow="185" aria-valuemin="0"
+                                                         style="width: 95.9%" aria-valuenow="185" aria-valuemin="0"
                                                          aria-valuemax="195"></div>
                                                 </div>
                                             </div>
