Change font awesome total confirmed cases

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                                         <div id="card-total-confirmed-cases" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                     </div>
                                     <div class="col-auto">
-                                        <i class="fas fa-check-square fa-2x text-gray-300"></i>
+                                        <i class="fas fa-temperature-high fa-2x text-gray-300"></i>
                                     </div>
                                 </div>
                             </div>
