--- a/src/index.html
+++ b/src/index.html
@@ -78,11 +78,11 @@
 
                     <!-- Date -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card border-left-success shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                             Last update
                                         </div>
                                         <div id="card-date" class="h5 mb-0 font-weight-bold text-gray-800"></div>
@@ -135,11 +135,11 @@
 
                     <!-- Infected countries -->
                     <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-success shadow h-100 py-2">
+                        <div class="card border-left-info shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1   ">
+                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1   ">
                                             Infected Countries
                                         </div>
                                         <div class="row no-gutters align-items-center">
@@ -148,7 +148,7 @@
                                             </div>
                                             <div class="col">
                                                 <div class="progress progress-sm mr-2">
-                                                    <div class="progress-bar bg-success" role="progressbar"
+                                                    <div class="progress-bar bg-info" role="progressbar"
                                                          style="width: 95.9%" aria-valuenow="185" aria-valuemin="0"
                                                          aria-valuemax="195"></div>
                                                 </div>
