--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
                 <div class="row">
                     <!-- Map -->
                     <div class="col-xl-7 col-lg-7">
-                        <div class="row" id="filter-card">
+                        <div class="d-none" id="filter-card" >
                             <div class="col-xl-12 col-lg-12">
                                 <div class="card shadow mb-4">
                                     <!-- Card Header -->
