filter hide and name change

--- a/src/index.html
+++ b/src/index.html
@@ -136,27 +136,30 @@
                             </div>
                         </div>
                     </div>
+<!--                    <div class="row d-none" id="filter-card" >-->
+<!--                        <div class="col-xl-12 col-lg-12">-->
+<!--                            <div class="card shadow mb-4">-->
+<!--                                &lt;!&ndash; Card Header &ndash;&gt;-->
+<!--                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">-->
+<!--                                    <h6 class="m-0 font-weight-bold text-primary">Filters</h6>-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; Card Body &ndash;&gt;-->
+<!--                                <div class="card-body" id="filter-container"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
                     <!-- Infected countries -->
-                    <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="col-xl-3 col-md-6 mb-4" id="filter-card">
                         <div class="card border-left-info shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-info text-uppercase mb-1   ">
-                                            Infected Countries
+                                            Filters
                                         </div>
-                                        <div class="row no-gutters align-items-center">
-                                            <div class="col-auto">
-                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">187</div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="progress progress-sm mr-2">
-                                                    <div class="progress-bar bg-info" role="progressbar"
-                                                         style="width: 95.9%" aria-valuenow="185" aria-valuemin="0"
-                                                         aria-valuemax="195"></div>
-                                                </div>
-                                            </div>
+                                        <div class="row no-gutters align-items-center" id="filter-container">
+                                            <p id="no-filter-msg">No filters applied</p>
                                         </div>
                                     </div>
                                     <div class="col-auto">
@@ -175,18 +178,6 @@
                 <div class="row">
                     <!-- Map -->
                     <div class="col-xl-7 col-lg-7">
-                        <div class="d-none" id="filter-card" >
-                            <div class="col-xl-12 col-lg-12">
-                                <div class="card shadow mb-4">
-                                    <!-- Card Header -->
-                                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                        <h6 class="m-0 font-weight-bold text-primary">Filters</h6>
-                                    </div>
-                                    <!-- Card Body -->
-                                    <div class="card-body" id="filter-container"></div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="card shadow mb-4">
                             <!-- Card Header -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -207,7 +198,7 @@
                         <div class="card shadow mb-4">
                             <!-- Card Header -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Daily Evolution</h6>
+                                <h6 class="m-0 font-weight-bold text-primary" id="daily-evolution-header">Daily Evolution</h6>
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
@@ -218,7 +209,7 @@
                         <!-- Lollipop Chart -->
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Lollipop Chart</h6>
+                                <h6 class="m-0 font-weight-bold text-primary" id="global-breakdown">Global Breakdown</h6>
                             </div>
                             <div class="card-body">
                                 <div id="case-breakdown"></div>
@@ -236,7 +227,7 @@
                         <!-- Line chart showing all cases -->
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Total Occurrences</h6>
+                                <h6 class="m-0 font-weight-bold text-primary" id="total-occurrences">Total Occurrences</h6>
                             </div>
                             <div class="card-body">
                                 <div id="line-graph-total"></div>
