lollipop circle resize issue

--- a/src/index.html
+++ b/src/index.html
@@ -141,20 +141,8 @@
                             </div>
                         </div>
                     </div>
-<!--                    <div class="row d-none" id="filter-card" >-->
-<!--                        <div class="col-xl-12 col-lg-12">-->
-<!--                            <div class="card shadow mb-4">-->
-<!--                                &lt;!&ndash; Card Header &ndash;&gt;-->
-<!--                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">-->
-<!--                                    <h6 class="m-0 font-weight-bold text-primary">Filters</h6>-->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; Card Body &ndash;&gt;-->
-<!--                                <div class="card-body" id="filter-container"></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
 
-                    <!-- Infected countries -->
+                    <!-- Filter Card -->
                     <div class="col-xl-3 col-md-6 mb-4" id="filter-card">
                         <div class="card border-left-info shadow h-100 py-2">
                             <div class="card-body">
@@ -164,7 +152,7 @@
                                             Filters
                                         </div>
                                         <div class="row no-gutters align-items-center" id="filter-container">
-                                            <p id="no-filter-msg">No filters applied</p>
+                                            <p class="h5 mb-0 font-weight-bold text-gray-800" id="no-filter-msg">No filters applied</p>
                                         </div>
                                     </div>
                                     <div class="col-auto">
