--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
                     <!-- Topbar Search -->
                     <div class="pull-right">
-                        <form onsubmit=""
+                        <form onsubmit="" id="search-form"
                               class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group">
                                 <input type="text" class="form-control bg-light border-0 small" id="search-query"
