--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                               class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group">
                                 <input type="text" class="form-control bg-light border-0 small" id="search-query"
-                                       placeholder="Filter by country..."
+                                       placeholder="Pan to a country or region..."
                                        aria-label="Search" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <button class="btn btn-primary" type="button" id="search-button">
