--- a/src/index.html
+++ b/src/index.html
@@ -343,6 +343,10 @@
         integrity="sha256-bqVeqGdJ7h/lYPq6xrPv/YGzMEb6dNxlfiTUHSgRCp8=" crossorigin="anonymous"></script>
 <!-- Custom JS module import -->
 <script type="module" src="js/main.js"></script>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116916521-5"></script>
+<script type="text/javascript" src="js/ga.js"></script>
+
 </body>
 
 </html>
