Update GA UA to GA 4

--- a/src/index.html
+++ b/src/index.html
@@ -345,9 +345,15 @@
         integrity="sha256-bqVeqGdJ7h/lYPq6xrPv/YGzMEb6dNxlfiTUHSgRCp8=" crossorigin="anonymous"></script>
 <!-- Custom JS module import -->
 <script type="module" src="js/main.js"></script>
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116916521-5"></script>
-<script type="text/javascript" src="js/ga.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5XEK427QD1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5XEK427QD1');
+</script>
+
 
 </body>
 
