Add correct redirect link

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="1; URL=https://f1-dnf-stats.fly.dev/"/>
+    <meta http-equiv="refresh" content="1; URL=https://corona-virus-insights.fly.dev/"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Metadata -->
