Update footer links and add contact email

--- a/src/index.html
+++ b/src/index.html
@@ -252,9 +252,13 @@
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Built with D3.js, Node.js & <i class="fa fa-fw fa-heart" style="color: red"></i> by Adam Jaamour & Matthew Drago &copy; 2020</span>
+                    <span>Built with D3.js, Node.js & <i class="fa fa-fw fa-heart" style="color: red"></i> by <a href="https://x.com/Adamouization" target="_blank">Adam Jaamour</a> & <a href="https://www.linkedin.com/in/mdrago98/" target="_blank">Matthew Drago</a> &copy; 2020</span>
                     <br>
                     <span><i>Data source: JHU CSSE (Johns Hopkins University Center for Systems Science and Engineering)</i></span>
+                    <br>
+                    <span>Other websites: <a href="https://www.globeflix.app/?ref=coronavirusdashboard" target="_blank">GlobeFlix</a>
+                        | <a href="https://adam.jaamour.com/?ref=coronavirusdashboard" target="_blank">Portfolio</a> | <a
+                            href="https://adamouization.github.io/?ref=coronavirusdashboard" target="_blank">Retro Blog</a></span>
                 </div>
             </div>
         </footer>
@@ -318,6 +322,8 @@
                 <p>Active country and date filters will be displayed in the <i>Filters</i> card in the top right-hand
                     corner. They can be removed by clicking on the small cross.</p>
                 <p>Data source: <a href="https://systems.jhu.edu/research/public-health/ncov/">JHU CSSE</a>.</p>
+                <p>Questions? <a href="mailto:hello@jaamour.com"> Contact us</a>.</p>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
